[package]
name = "image-optimizer"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
image = { version = "0.25", features = ["webp"] }
webp = "0.3"
serde = { version = "1.0", features = ["derive"] }
reqwest = "0.12.24"
bytes = "1.11.0"
sha1 = "0.10.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
